<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:locale="ko"
    tools:ignore="MissingTranslation">
    <string name="app_name">빠띠</string>
    <string name="facebook_app_id">743728572394700</string>
    <string name="fb_login_protocol_scheme">fb743728572394700</string>

    <!-- Strings related to login -->
    <string name="title_activity_all_comments">댓글</string>
    <string name="title_activity_login">로그인</string>
    <string name="title_activity_email_login">이메일 로그인</string>
    <string name="title_activity_post_images_view">사진보기</string>

    <string name="prompt_email">이메일</string>
    <string name="prompt_password">비밀번호</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="error_invalid_email">이메일 주소를 확인해 주세요</string>
    <string name="error_invalid_password">비밀번호는 8자 이상입니다</string>
    <string name="error_incorrect_password">비밀번호를 확인해 주세요</string>
    <string name="error_field_required">값을 입력해 주세요</string>
    <string name="eamil_login_permission_rationale">이메일 주소를 자동완성하기 위해 주소록에 접근할 권한이 필요합니다</string>

    <string name="login_by_email_button">이메일로 로그인</string>
    <string name="login_by_facebook_button">페이스북으로 로그인</string>
    <string name="login_by_twitter_button">트위터로 로그인</string>
    <string name="login_by_google_button">구글로 로그인</string>
    <string name="sign_up_link">처음 오셨나요? <u>회원가입</u></string>

    <string name="action_refresh_posts">새소식</string>
    <string name="dashboard_post_prefix_group_title">{fa-angle-right}</string>

    <string name="references_link_source_site_name_fallback">{fa-external-link} 원글보기</string>
    <string name="references_doc_file_source_icon">{fa-floppy-o}</string>

    <string name="references_poll_agree_button">{fa-thumbs-up} 찬성</string>
    <string name="references_poll_disagree_button">{fa-thumbs-down} 반대</string>

    <string name="doc_file_source_download_permission_rationale">다운로드 하기 위한 저장소에 접근할 수 있는 권한이 필요합니다</string>
    <string name="doc_file_source_download_permission_denied">다운로드 하기 위한 권한이 필요합니다.\n[설정] > [권한] 에서 저장소에 접근할 수 있는 권한을 허용할 수 있습니다.</string>
    <string name="image_pick_permission_rationale">이미지를 선택하기 위해 저장소에 접근할 수 있는 권한이 필요합니다</string>
    <string name="image_pick_permission_denied">이미지를 선택하기 위해 저장소에 접근할 수 있는 권한이 필요합니다.\n[설정] > [권한] 에서 저장소에 접근할 수 있는 권한을 허용할 수 있습니다.</string>
    <string name="not_found_app_for_downloaded_file">다운로드된 파일을 열 수 있는 프로그램이 없습니다.</string>
    <string name="error_login">로그인이 취소되었습니다</string>
    <string name="error_google_login">로그인이 취소되었습니다.\n [설정]에서 구글 계정을 다시 확인해 주세요.</string>
    <string name="error_any">앗! 뭔가 잘못되었어요</string>

    <string name="drawer_open">메뉴를 엽니다</string>
    <string name="drawer_close">메뉴를 닫습니다</string>

    <string name="comment_form_placeholer">댓글을 남기세요...</string>
    <string name="load_more_comments">%s개의 댓글 모두 보기</string>
    <string name="no_comments">가장 먼저 댓글을 남겨 보세요</string>

    <string name="new_comment">댓글달기</string>
    <string name="like">공감해요</string>

    <!-- com.github.curioustechizen.android-ago -->
    <string name="just_now">방금</string>
    <string name="title_activity_settings">설정</string>

    <string name="no_network_connect">네트워크 연결이 끊어졌습니다</string>
    <string name="check_network_status_button">다시 시도하기</string>
    <string name="fail_to_connect">연결할 수 없습니다. 잠시 후에 다시 시도해 주세요.</string>
    <string name="title_activity_disconnect">네트워크 끊김</string>

    <string name="navigation_menu_dashboard">내 피드</string>
    <string name="navigation_settings">설정</string>

    <string name="license">라이센스</string>
    <string name="new_version">새로운 버전의 앱이 업로드되었습니다. 업그레이드하시겠습니까? 버전 :  %s</string>
    <string name="ok">확인</string>
    <string name="login_fail">로그인 실패했습니다</string>
    <string name="login_password_not_found_user">이메일과 비밀번호가 일치하지 않습니다. 새로 가입하시겠습니까?</string>
    <string name="login_social_not_found_user">아직 가입하지 않으셨습니다. 새로 가입하시겠습니까?</string>
    <string name="no_posts">게시글이 없습니다. 관심가는 빠띠에 가입해 보세요.</string>
    <string name="blocked_or_not_found_parti">해당 빠띠는 삭제되었거나 비공개로 숨겨졌습니다.</string>
    <string name="blocked_post">해당 게시글의 빠띠는 비공개로 숨겨졌습니다.</string>
    <string name="go_to_parties_button">다른 빠띠 찾기</string>
    <string name="retry_button">다시 시도합니다</string>
    <string name="title_activity_messages">알림</string>
    <string name="not_found_option">게시물 혹은 제안이 삭제되었거나 찾을 수 없습니다.</string>
    <string name="not_found_post">게시물이 삭제되었거나 찾을 수 없습니다.</string>
    <string name="not_found_comment">댓글이 삭제되었거나 찾을 수 없습니다.</string>
    <string name="title_activity_post">게시글</string>
    <string name="pref_receive_push_message_off">알림을 받지 않습니다</string>
    <string name="pref_receive_push_message_on">알림을 받습니다</string>
    <string name="logout_confirm_title">로그아웃</string>
    <string name="logout_confirm_message">정말 로그아웃하시겠습니까?</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="cancel">취소</string>
    <string name="receivable_push_message_confirm_title">알림</string>
    <string name="receivable_push_message_confirm_message">빠띠의 최근 소식 알림을 받으시겠습니까?</string>
    <string name="title_activity_post_form">게시글 등록</string>
    <string name="dialog_title_choice_parti_on_post_form">빠띠 선택</string>
    <string name="save">올리기</string>
    <string name="error_gif">파일 용량이 너무 큽니다. %1$sM 이하의 파일을 선택해 주세요</string>
    <string name="new_post_placeholder">%s님, 무슨 이야기를 나누실래요?</string>
    <string name="title_activity_image_picker">사진 선택</string>
    <string name="merged_notification_title">새로운 소식 %d개</string>

    <string name="view_more">더보기</string>
    <string name="view_less">줄이기</string>

    <string name="not_support_device">지원하지 않는 기기입니다</string>
    <string name="google_play_services_update_text">구글 서비스를 업데이트해야 구글ID로 빠띠에 로그인 할 수 있습니다</string>
    <string name="navigation_my_profile">내 프로필</string>
    <string name="no_messages">알림 메시지가 없습니다.</string>
    <string name="not_found_parti">빠띠를 찾을 수 없습니다</string>
    <string name="report_logout">로그아웃 되었습니다.</string>
    <string name="option_form_placeholer">새로운 제안하기</string>
    <string name="option_dialog_title">새로운 제안</string>
    <string name="option_dialog_hint">제안을 적으세요</string>
    <string name="wiki_author_label">작성</string>
    <string name="comment_context_menu">댓글 삭제하기</string>
</resources>
