<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ProgressBar
        android:id="@+id/progressbar_status"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/loginMenuTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_menu_title"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.joanzapata.iconify.widget.IconButton
            android:id="@+id/button_login_by_facebook"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/login_by_facebook_button"
            android:textStyle="bold" />

        <com.joanzapata.iconify.widget.IconButton
            android:id="@+id/button_login_by_twitter"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/login_by_twitter_button"
            android:textStyle="bold" />

        <com.joanzapata.iconify.widget.IconButton
            android:id="@+id/button_login_by_google"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/login_by_google_button"
            android:textStyle="bold" />

        <com.joanzapata.iconify.widget.IconButton
            android:id="@+id/button_login_by_email"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/login_by_email_button"
            android:textStyle="bold" />

        <com.joanzapata.iconify.widget.IconButton
            android:id="@+id/button_sign_up"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up_link"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
