<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="16dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/post_card_padding"
            android:background="@drawable/border_bottom_on_white_bg">
            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/draweeview_post_parti_logo"
                android:layout_width="@dimen/feed_item_parti_logo"
                android:layout_height="@dimen/feed_item_parti_logo"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:gravity="left"
                fresco:actualImageScaleType="centerCrop"
                fresco:failureImage="@drawable/img_sample_parti_logo"
                fresco:failureImageScaleType="centerCrop" />
            <TextView
                android:id="@+id/textview_post_parti_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="220dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:gravity="left"
                android:maxLines="1"
                android:ellipsize="end" />

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/textview_prefix_group_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:text="@string/dashboard_post_prefix_group_title" />
            <TextView
                android:id="@+id/textview_post_group_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:maxLines="1"
                android:ellipsize="end" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_post_latest_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_space"
            android:layout_marginLeft="@dimen/default_space"
            android:layout_marginRight="@dimen/default_space"
            android:orientation="horizontal"
            android:padding="6dp"
            android:background="@drawable/textview_bg_post_latest_activity"
            android:visibility="gone" >
            <xyz.parti.catan.ui.view.SmartTextView
                android:id="@+id/smarttextview_post_latest_activity_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_muted" />
            <xyz.parti.catan.ui.view.LooselyRelativeTimeTextView
                android:id="@+id/textview_post_latest_activity_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:textColor="@color/text_muted" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/post_card_padding">
            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/draweeview_post_user_image"
                android:layout_width="@dimen/feed_item_user_image"
                android:layout_height="@dimen/feed_item_user_image"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                fresco:actualImageScaleType="centerCrop"
                fresco:roundAsCircle="true"
                fresco:failureImage="@drawable/ic_account_circle_white_24dp"
                fresco:failureImageScaleType="centerCrop" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textview_post_user_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <xyz.parti.catan.ui.view.LooselyRelativeTimeTextView
                    android:id="@+id/textview_post_created_at"
                    android:textColor="@color/text_muted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <xyz.parti.catan.ui.view.SmartTextView
            android:id="@+id/smarttextview_post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="@dimen/post_card_padding"
            android:paddingRight="@dimen/post_card_padding"
            android:textSize="18sp"
            android:lineSpacingMultiplier="1.1" />

        <xyz.parti.catan.ui.view.SmartTextView
            android:id="@+id/textview_post_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/post_card_padding"
            android:paddingRight="@dimen/post_card_padding"
            android:textSize="@dimen/text_default_size"
            android:lineSpacingMultiplier="1.1" />

        <xyz.parti.catan.ui.view.ReferenceView
            android:id="@+id/referenceview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="@dimen/post_card_padding"
            android:layout_marginLeft="@dimen/post_card_padding"
            android:background="@color/post_border" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/post_card_padding"
            android:layout_marginLeft="@dimen/post_card_padding"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_post_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:minWidth="0dp"
                android:textColor="@color/post_button_text"
                android:background="@android:color/transparent"
                android:textSize="14dp"
                android:text="@string/like" />
            <Button
                android:id="@+id/button_new_post_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:minWidth="0dp"
                android:textColor="@color/post_button_text"
                android:background="@android:color/transparent"
                android:textSize="14dp"
                android:text="@string/new_comment" />
            <com.joanzapata.iconify.widget.IconButton
                android:id="@+id/button_show_post_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:minWidth="0dp"
                android:textColor="@color/style_color_accent"
                android:textSize="14dp"
                android:background="@android:color/transparent" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/comments_border"/>

        <LinearLayout
            android:id="@+id/layout_comments_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/post_comments_background" >
            <TextView
                android:id="@+id/textview_comments_load_more"
                android:text="@string/load_more_comments"
                android:textColor="@color/text_muted"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/post_card_padding"
                android:paddingRight="@dimen/post_card_padding" />
            <LinearLayout
                android:id="@+id/layout_new_comment_form"
                android:orientation="horizontal"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/post_card_padding"
                android:paddingRight="@dimen/post_card_padding">
                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/draweeview_new_comment_user_image"
                    android:layout_width="@dimen/comment_user_image"
                    android:layout_height="@dimen/comment_user_image"
                    android:layout_gravity="top"
                    android:paddingRight="5dp"
                    fresco:actualImageScaleType="centerCrop"
                    fresco:roundAsCircle="true"
                    fresco:failureImage="@drawable/ic_account_circle_white_24dp"
                    fresco:failureImageScaleType="centerCrop"/>
                <TextView
                    android:id="@+id/textview_new_comment_input"
                    android:text="@string/comment_form_placeholer"
                    android:textColor="@color/comment_form_placeholer"
                    android:background="@drawable/edittext_bg_comment"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
